force-app/main/default/objects/Stock__c/fields/Bin_Number__c.field-meta.xml
<CustomField>
    <fullName>Bin_Number__c</fullName>
    <label>Bin Number</label>
    <length>220</length>
    <type>Text</type>
</CustomField>