force-app/main/default/objects/Stock__c/fields/Defected_Product__c.field-meta.xml
<CustomField>
    <fullName>Defected_Product__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Defected Product</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>