force-app/main/default/objects/Stock__c/fields/Freeze_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Freeze_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Freeze Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>