force-app/main/default/objects/Stock__c/fields/MRN_Date__c.field-meta.xml
<CustomField>
    <fullName>MRN_Date__c</fullName>
    <label>MRN Date</label>
    <type>Date</type>
</CustomField>