force-app/main/default/objects/Stock__c/fields/MRN_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>MRN_NUMBER__c</fullName>
    <label>MRN NUMBER</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>