force-app/main/default/objects/Stock__c/fields/Part_No_Part_Code__c.field-meta.xml
<CustomField>
    <fullName>Part_No_Part_Code__c</fullName>
    <label>Part No./ Part Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>