force-app/main/default/objects/Stock__c/fields/Product_In__c.field-meta.xml
<CustomField>
    <fullName>Product_In__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Product In</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>