force-app/main/default/objects/Stock__c/fields/Product_Part__c.field-meta.xml
<CustomField>
    <fullName>Product_Part__c</fullName>
    <label>Product/Part</label>
    <referenceTo>Part__c</referenceTo>
    <relationshipLabel>Stocks</relationshipLabel>
    <relationshipName>Stocks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>