force-app/main/default/objects/Stock__c/fields/Stock_Id__c.field-meta.xml
<CustomField>
    <fullName>Stock_Id__c</fullName>
    <label>Stock Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>