force-app/main/default/objects/Stock__c/fields/Stock_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Stock_Update_Date__c</fullName>
    <label>Stock Update Date</label>
    <type>Date</type>
</CustomField>