force-app/main/default/objects/Stock__c/fields/Total_Unbooked_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Unbooked_Quantity__c</fullName>
    <formula>Total_Quantity__c -  Freeze_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Unbooked Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>