force-app/main/default/objects/Stock__c/fields/Unfreeze_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Unfreeze_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Unfreeze Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>