force-app/main/default/objects/Stock__c/fields/Ware_House__c.field-meta.xml
<CustomField>
    <fullName>Ware_House__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ware House</label>
    <referenceTo>Ware_House__c</referenceTo>
    <relationshipLabel>Stocks</relationshipLabel>
    <relationshipName>Stocks</relationshipName>
    <type>Lookup</type>
</CustomField>