force-app/main/default/objects/Stock__c/fields/Warehouse_City__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_City__c</fullName>
    <formula>Product_Part__c+Text( Ware_House__r.City__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warehouse City</label>
    <type>Text</type>
</CustomField>