force-app/main/default/objects/Stock__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Part__c</columns>
    <columns>Ware_House__c</columns>
    <columns>Product_In__c</columns>
    <columns>Product_Out__c</columns>
    <columns>Total_Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>